--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -36,7 +36,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/DetalleProducto"
-        android:textColor="#0B2CE4"
+        android:textColor="#3E4EA8"
         android:textSize="24sp" />
 
     <LinearLayout
